Fixed overflow

--- a/css/about.css
+++ b/css/about.css
@@ -3,8 +3,6 @@ body{
     display: grid;
     background-color: #f4f4f4;
     align-content: center;
-    overflow: hidden;
-
 }
 section{
     display: grid;
@@ -128,6 +126,21 @@ section{
     section{
         grid-template-columns: 0fr 1fr;
         width: 100%;
+    }
+    .content p{
+        font-size: 14px;
+    }
+    .links li a{
+        font-size: 14px;
+    }
+    .links{
+        margin: 5px 0;
+    }
+    .links li{
+        padding: 6px 10px;
+    }
+    .icons li i{
+        font-size: 15px;
     }
 
 }
